--- a/index.html
+++ b/index.html
@@ -263,21 +263,21 @@
                     <table>
                         <tr>
                             <td>
-                                <span>Прізвище та ім’я</span>
                                 <input type="text" name="input-text" id="tex">
                                 <label for="tex">
+                                    <span>Прізвище та ім’я</span>
                                 </label>
                             </td>
                             <td>
-                                <span>Ел. пошта</span>
-                                <input type="email" name="input-mail" class="mail" id="mail">
-                                <label for="mail">
+                                <input type="email" name="input-mail" class="mail" id="maill">
+                                <label for="maill">
+                                    <span>Ел. пошта</span>
                                 </label>
                             </td>
                             <td>
-                                <span>Телефон</span>
-                                <input type="text" name="input-text" class="telefon" id="text">
-                                <label for="text" class="footer-label">
+                                <input type="text" name="input-text" class="telefon" id="t-p-text">
+                                <label for="t-p-text" class="footer-label">
+                                    <span>Телефон</span>
                                 </label>
                             </td>
                         </tr>
@@ -287,8 +287,8 @@
                     <table class="footer-menu">
                         <tr>
                             <td>
-                                <span>Країна</span>
                                 <label class="selects">
+                                    <span>Країна</span>
                                     <select name="footer-city" class="about text footer-city">
                                         <option value="Ваше місто" class="about text" selected disabled>Ваша країна
                                         </option>
@@ -298,8 +298,8 @@
                                 </label>
                             </td>
                             <td class="fm-td">
-                                <span>Адреса</span>
                                 <label>
+                                    <span>Адреса</span>
                                     <input type="text" name="input-text" class="footer-text">
                                 </label>
                             </td>
@@ -308,21 +308,21 @@
                     <table class="footer-menus">
                         <tr>
                             <td>
-                                <span>Місто</span>
-                                <input type="text" name="input-text">
-                                <label for="text">
+                                <input type="text" name="input-text" id="p-t-text">
+                                <label for="p-t-text">
+                                    <span>Місто</span>
                                 </label>
                             </td>
                             <td>
-                                <span>Будинок</span>
-                                <input type="email" name="input-mail" class="mail">
-                                <label for="mail">
+                                <input type="email" name="input-mail" class="mail"id="maills">
+                                <label for="maills">
+                                    <span>Будинок</span>
                                 </label>
                             </td>
                             <td>
-                                <span>Поштовий індекс</span>
-                                <input type="text" name="input-text" class="telefon">
-                                <label for="text" class="footer-label">
+                                <input type="text" name="input-text" class="telefon" id="tuk">
+                                <label for="tuk" class="footer-label">
+                                    <span>Поштовий індекс</span>
                                 </label>
                             </td>
                         </tr>
@@ -359,15 +359,15 @@
             <div class="last-menu">
                 <form>
                     <p>
-                        <span class="special-span">Логін</span>
-                        <input type="text" name="input-text" class="lt-mn" maxlength="31">
-                        <label for="text" class="lt-lb">
+                        <input type="text" name="input-text" class="lt-mn" id="p-text" maxlength="31">
+                        <label class="lt-lb" for="p-text">
+                            <span class="special-span">Логін</span>
                         </label>
                     </p>
                     <p class="seconde-p-lt-mn">
-                        <span>Пароль</span>
-                        <input type="password" name="input-text" class="lt-mn" maxlength="31">
-                        <label for="text" class="lt-lb">
+                        <input type="password" name="input-text" class="lt-mn" id="p-texts"maxlength="31">
+                        <label class="lt-lb" for="p-texts">
+                            <span>Пароль</span>
                         </label>
                     </p>
                     <p class="third-p-lt-mn">
